--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="navContainer">
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                     <i class="fa fa-bars"></i>
-                <a href="index.html"><img class="logo" src="/images/logo.svg" alt=""></a>
+                <a href="index.html"><img class="logo" src="./images/logo.svg" alt=""></a>
                 <div class="navText topnav" id="myTopnav">  
                 <a class="navHamb" href="index.html"><li class="liIndexV2">INICIO</li></a>
                 <a class="navHamb" href="nosotros.html"><li class="liIndexV2">NOSOTROS</li></a>
@@ -196,31 +196,31 @@
         <div class="slider">
             <div>
                 <section class="seguroCard">
-                    <img class="logoComp" src="/images/coope.png" alt="cooperacion logo">
+                    <img class="logoComp" src="images/coope.png" alt="cooperacion logo">
                     <h5 class="slidTitulo">COOPERACIÓN SEGUROS</h5>
                 </section>
             </div>
             <div>
                 <section class="seguroCard">
-                    <img class="logoComp" src="/images/sancor.png" alt="sancor logo">
+                    <img class="logoComp" src="images/sancor.png" alt="sancor logo">
                     <h5 class="slidTitulo">SANCOR SEGUROS</h5>
                 </section>
             </div>
             <div>
                 <section class="seguroCard">
-                    <img class="logoComp" src="/images/allianz.png" alt="allianz logo">
+                    <img class="logoComp" src="images/allianz.png" alt="allianz logo">
                     <h5 class="slidTitulo">ALLIANZ</h5>
                 </section>
             </div>
             <div>   
                 <section class="seguroCard">
-                    <img class="logoComp" src="/images/nacion.png" alt="nacion logo">
+                    <img class="logoComp" src="images/nacion.png" alt="nacion logo">
                     <h5 class="slidTitulo">NACIÓN SEGUROS</h5>
                 </section>
             </div>
             <div>   
                 <section class="seguroCard">
-                    <img class="logoComp" src="/images/zurich.png" alt="logo zurich">
+                    <img class="logoComp" src="images/zurich.png" alt="logo zurich">
                     <h5 class="slidTitulo">ZURICH SEGUROS</h5>
                 </section>
             </div> 
