cambios imagenes general

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="navContainer">
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                     <i class="fa fa-bars"></i>
-                <a href="index.html"><img class="logo" src="./images/logo.svg" alt=""></a>
+                <a href="index.html"><img class="logo" src="images/logo.svg" alt=""></a>
                 <div class="navText topnav" id="myTopnav">  
                 <a class="navHamb" href="index.html"><li class="liIndexV2">INICIO</li></a>
                 <a class="navHamb" href="nosotros.html"><li class="liIndexV2">NOSOTROS</li></a>
