--- a/productores.html
+++ b/productores.html
@@ -27,7 +27,7 @@
         <div class="navContainer">
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <i class="fa fa-bars navBlanco"></i>
-          <a href="index.html"><img class="logo" src="/images/logoinvert.svg" alt=""></a>
+          <a href="index.html"><img class="logo" src="images/logoinvert.svg" alt=""></a>
           <div class="navText topnav" id="myTopnav">  
           <a class="navHamb" href="index.html"><li class="liIndex">INICIO</li></a>
           <a class="navHamb" href="nosotros.html"><li class="liIndex">NOSOTROS</li></a>
@@ -51,13 +51,13 @@
         <img class="iconCard" src="images/carpeta.svg" alt="">
         <h3 class="titProd">BIBLIOTECA ONLINE</h3>
         <p class="pClie">La biblioteca donde podés ver todas las coberturas de seguros Agropecuarios.</p>
-        <a href="biblioteca.html"><button class="prodButton">INGRESAR</button></a>
+        <a href="bibliotecaagro.html"><button class="prodButton">INGRESAR</button></a>
     </div>
     <div class="cardProd">
         <img class="iconCard" src="images/camara.svg" alt="">
         <h3 class="titProd">VIDEOS ASESORAMIENTO</h3>
         <p class="pClie">Videos de asesoramiento que no superan el minuto de duración.</p>
-        <a href="videos.html"><button class="prodButton">INGRESAR</button></a>
+        <a href="videosagro.html"><button class="prodButton">INGRESAR</button></a>
     </div>
     <div class="cardProd">
         <img class="iconCard" src="images/tick.svg" alt="">
