--- a/nosotros.html
+++ b/nosotros.html
@@ -27,7 +27,7 @@
         <div class="navContainer">
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <i class="fa fa-bars navBlanco"></i>
-          <a href="index.html"><img class="logo" src="/images/logoinvert.svg" alt=""></a>
+          <a href="index.html"><img class="logo" src="images/logoinvert.svg" alt=""></a>
           <div class="navText topnav" id="myTopnav">  
           <a class="navHamb" href="index.html"><li class="liIndex">INICIO</li></a>
           <a class="navHamb" href="nosotros.html"><li class="liIndex">NOSOTROS</li></a>
